<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffccd7df">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/launcherTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textColor="#ff1c374c" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton1"
        android:id="@+id/button"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView"
        android:textColor="#ff000000"
        android:background="#ffdc7630"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:layout_marginBottom="0dp"
        android:onClick="launchSpotifyStreamer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:background="#ffdc7630"
        android:textColor="#ff000000"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:onClick="launchScoresApp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton3"
        android:id="@+id/button3"
        android:background="#ffdc7630"
        android:textColor="#ff000000"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="launchLibraryApp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10dp"
        android:background="#ffdc7630"
        android:textColor="#ff000000"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:onClick="launchBuildItBigger" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_marginTop="10dp"
        android:background="#ffdc7630"
        android:textColor="#ff000000"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:onClick="launchXYZReader" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launchButton6"
        android:id="@+id/button6"
        android:background="#ffb60035"
        android:textColor="#ffffffff"
        android:shadowColor="#ffccd7df"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="launchCapstoneApp" />

</RelativeLayout>
